[project]
name = "jcMon"
version = "0.1.0"
description = "Tools to make your charming life easier."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "gitpython>=3.1.46",
    "pydantic-settings>=2.13.1",
    "pyright>=1.1.408",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "tenacity>=9.1.4",
    "uvicorn>=0.42.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [".git", "__pycache__", ".tox", "build", "dist", "*.egg_info", "venv"]

[tool.ruff.lint]
select = ["F", "E", "W", "C", "N", "R", "D", "I001", "UP"]
# Ignore W503, E501 because using black creates errors with this
# Ignore D107 Missing docstring in __init__
ignore = ["E501", "D107", "D417"]
fixable = ["ALL"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 99

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.codespell]
ignore-words=".codespellignore"

[tool.pyright]
include = ["main.py", "src"]
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "basic"
reportIncompatibleMethodOverride = false
reportMissingModuleSource = true
stubPath = ""

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "pytest>=9.0.2",
]
